<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameover_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Activity_GameOver">

    <ImageView
        android:id="@+id/gameover_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY"
        android:src="@drawable/gameover_background" />

    <TextView
        android:id="@+id/gameover_gameover_label"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/gameover_label_text"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gameover_score_label"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:text="@string/no_text"
        android:textColor="#dcb9df"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"/>


    <Button
        android:id="@+id/gameover_play_btn"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="250dp"
        android:text="@string/play_btn_text"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gameover_menu_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/menu_btn_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gameover_scores_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:text="@string/score_btn_text" />

</RelativeLayout>